# qr-detector

./: README.md  functions.py  main.py  main2.py  pyproject.toml
qr_detector/: __init__.py  detector.py
